# TravelGuide-frontend-dev-branch

./: .gitignore
backend/: Procfile  pyproject.toml  requirements.txt
backend/apps/ar/: api_urls.py  models.py  serializers.py  tests.py  urls.py
backend/apps/ar/migrations/: 0001_initial.py  0002_alter_arobject_scene.py
backend/apps/ar/views/: api_views.py  views.py
backend/apps/business/: models.py
backend/apps/business/migrations/: 0001_initial.py  0002_initial.py
backend/apps/content/migrations/: 0001_initial.py
backend/apps/dashboards/: forms.py
backend/apps/dashboards/urls/: admin_urls.py  ar_scene_urls.py  business_owner_urls.py  business_urls.py  event_organizer_urls.py  tourism_officer_urls.py  tourist_spot_urls.py  tourist_urls.py  user_urls.py
backend/apps/dashboards/views/: admin_views.py  ar_scene_views.py  business_owner_views.py  business_views.py  cards_utils.py  event_organizer_views.py  event_views.py  psgc_views.py  tourism_officer_views.py  tourism_views.py  tourist_spot_views.py  tourist_views.py  user_views.py
backend/apps/events/: models.py
backend/apps/tourism/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  widgets.py
backend/apps/users/: adapters.py  forms.py  models.py  urls.py
backend/bicoltravelguide/: settings.py  urls.py
backend/data/: psgc_bicol.csv  tourist_spots_data.csv
backend/staticfiles/css/: _custom.css  auth.css  custom.css
backend/staticfiles/js/: animsition.min.js
backend/staticfiles/scss/: bootstrap-reboot.css  bootstrap.css  bootstrap.css.map  style.css  style.css.map
(+122 files in other folders)
